# CMKL-AttentionMonitoring

./: .gitignore  PLAN.md  README.md  pyproject.toml  requirements.txt
app/: __init__.py  routes.py
app/pipeline/: __init__.py  detector.py  direction.py  landmarks.py  tracker.py
app/services/: __init__.py  state_logger.py  video_processor.py
app/templates/: dashboard.html  report.html
static/css/: style.css
static/js/: app.js
