[project]
name = "cmkl-attention-monitoring"
version = "0.1.0"
description = "Attention monitoring system using YOLOWorld, MediaPipe, and head pose estimation"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "ultralytics>=8.0.0",
    "mediapipe>=0.10.0",
    "opencv-python>=4.9.0",
    "numpy>=1.26.0",
    "huggingface-hub>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.editable]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
